# stellar-txwatch-core

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Issues.md  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
config/: example.toml
crates/cli/: build.rs
crates/cli/src/: main.rs
crates/cli/tests/: validate.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: integration.rs
crates/config/tests/fixtures/: broken-example.toml
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/poller/: Cargo.toml
crates/poller/src/: lib.rs  metrics.rs
crates/poller/tests/: helpers.rs  integration.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
docs/: alert-rules.md  configuration.md
