[package]
name    = "txwatch-poller"
version = "0.1.0"
edition = "2021"

[dependencies]
txwatch-config   = { path = "../config" }
txwatch-rules    = { path = "../rules" }
txwatch-notifier = { path = "../notifier" }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }

[dev-dependencies]
wiremock         = "0.6"
tokio            = { workspace = true }
