[package]
name    = "txwatch-poller"
version = "0.1.0"
edition = "2021"

[features]
# Enable Prometheus metrics counters and optional /metrics HTTP endpoint.
metrics = ["dep:prometheus", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
txwatch-config   = { path = "../config" }
txwatch-rules    = { path = "../rules" }
txwatch-notifier = { path = "../notifier" }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
prometheus       = { version = "0.13", optional = true }
hyper            = { version = "1", features = ["http1", "server"], optional = true }
hyper-util       = { version = "0.1", features = ["tokio"], optional = true }
http-body-util   = { version = "0.1", optional = true }

[dev-dependencies]
wiremock         = "0.6"
tokio            = { workspace = true }
