[package]
name    = "txwatch-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
txwatch-config = { path = "../config" }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
